--- a/girlsweb.online.html
+++ b/girlsweb.online.html
@@ -57,8 +57,14 @@
   <p>This website contains content intended for adults. By clicking below, you confirm you are 18 years or older.</p>
   <a href="https://offers.affimelody.com/click?pid=107337&offer_id=25" class="button">Enter Site</a>
 </body>
+<p style="position: absolute; bottom: 20px; font-size: 0.9em; opacity: 0.6;">
+  <a href="https://ywwphrr.daily-romancedating.com/rb6223a" style="color: #fff; text-decoration: underline;">
+    Check our other dating partner
+  </a>
+</p>
+</body>
 </html>
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -76,4 +82,4 @@
 <body>
   <p>Redirecting you...</p>
 </body>
-</html>
+</html>  
