--- a/girlsweb.online.html
+++ b/girlsweb.online.html
@@ -2,52 +2,35 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>18+ Adults Only</title>
+  <title>Adults Only</title>
   <style>
-    * {
+    body {
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
-    }
-
-    body, html {
-      height: 100%;
-      overflow: hidden;
-      font-family: Arial, sans-serif;
+      background: url('https://images.pexels.com/photos/4118991/pexels-photo-4118991.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1') no-repeat center center fixed;
+      background-size: cover;
+      font-family: 'Arial', sans-serif;
       color: #fff;
-      text-align: center;
-    }
-
-    video#bg-video {
-      position: fixed;
-      right: 0;
-      bottom: 0;
-      min-width: 100%;
-      min-height: 100%;
-      object-fit: cover;
-      z-index: -1;
-    }
-
-    .overlay {
-      position: relative;
-      z-index: 1;
-      background: rgba(0, 0, 0, 0.6);
-      height: 100%;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      padding: 2em;
+      height: 100vh;
+      backdrop-filter: brightness(0.5);
+      text-align: center;
     }
 
     h1 {
       font-size: 3em;
       margin-bottom: 0.5em;
+      text-shadow: 0 0 10px black;
     }
 
     p {
-      font-size: 1.2em;
+      font-size: 1.3em;
+      max-width: 80%;
       margin-bottom: 1.5em;
+      text-shadow: 0 0 5px black;
     }
 
     .button {
@@ -58,19 +41,31 @@
       border-radius: 30px;
       font-size: 1.2em;
       font-weight: bold;
+      box-shadow: 0 0 15px #ff3366;
+      transition: 0.3s ease;
       margin: 0.5em;
-      display: inline-block;
-      transition: background 0.3s ease;
     }
 
     .button:hover {
       background-color: #ff0044;
+      box-shadow: 0 0 25px #ff0044;
     }
 
-    .note {
-      margin-top: 2em;
-      font-size: 0.9em;
-      opacity: 0.8;
+    .secondary-button {
+      background-color: rgba(255, 255, 255, 0.2);
+      color: #fff;
+      padding: 0.6em 1.5em;
+      text-decoration: none;
+      border-radius: 30px;
+      font-size: 1em;
+      font-weight: normal;
+      box-shadow: none;
+      transition: 0.3s ease;
+      margin: 0.5em;
+    }
+
+    .secondary-button:hover {
+      background-color: rgba(255, 255, 255, 0.3);
     }
 
     @media (max-width: 600px) {
@@ -78,24 +73,24 @@
         font-size: 2em;
       }
 
-      p, .note {
+      p {
+        font-size: 1em;
+      }
+
+      .button, .secondary-button {
+        width: 80%;
         font-size: 1em;
       }
     }
   </style>
 </head>
 <body>
-  <video autoplay muted loop playsinline id="bg-video">
-    <source src="https://srv-store2.gofile.io/download/NzpKcT/37c7e005f66a6b66cba2e147df1e5ef4/18%2B%20bg.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-  </video>
-
-  <div class="overlay">
-    <h1>18+ Adults Only</h1>
-    <p>This website contains content intended for adults. By clicking below, you confirm you are 18 years or older.</p>
-    <a href="https://offers.affimelody.com/click?pid=107337&offer_id=25" class="button">Enter Site</a>
-    <a href="https://ywwphrr.daily-romancedating.com/rb6223a" class="button" style="background-color: rgba(255,255,255,0.2); border: 1px solid #fff;">Try another partner</a>
-    <p class="note">For convenience, click the three dots and open in your browser</p>
-  </div>
+  <h1>18+ Adults Only</h1>
+  <p>This website contains content intended for adults. By clicking below, you confirm you are 18 years or older.</p>
+  <a href="https://offers.affimelody.com/click?pid=107337&offer_id=25" class="button">Enter Site</a>
+  <a href="https://ywwphrr.daily-romancedating.com/rb6223a" class="secondary-button">Try another dating partner</a>
 </body>
 </html>
+
+   
+    
