--- a/girlsweb.online.html
+++ b/girlsweb.online.html
@@ -1,1 +1,50 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Just a moment...</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: url('background.jpg') no-repeat center center;
+      background-size: cover;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-family: sans-serif;
+      color: white;
+      text-align: center;
+    }
+    .hint {
+      font-size: 20px;
+      line-height: 1.5;
+      background: rgba(0, 0, 0, 0.6);
+      padding: 15px 25px;
+      border-radius: 12px;
+    }
+  </style>
+</head>
+<body>
+  <div class="hint" id="message" style="display: none;">
+    Tap <b>⋮</b> or <b>Aa</b> at the top<br>and select <b>"Open in browser"</b>
+  </div>
+
+  <script>
+    const redirectURL = "https://offers.affimelody.com/click?pid=107337&offer_id=25";
+    const ua = navigator.userAgent.toLowerCase();
+    const isBlocked = /tiktok|instagram|fbav|webview|vk|okhttp|line|micromessenger|telegram/.test(ua);
+
+    if (isBlocked) {
+      document.getElementById("message").style.display = "block";
+    } else {
+      setTimeout(() => {
+        window.location.replace(redirectURL);
+      }, 300);
+    }
+  </script>
+</body>
+</html>
