--- a/index.html
+++ b/index.html
@@ -1,57 +1,43 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <title>Info Page</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        html, body {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            background: url('background.jpg') no-repeat center center fixed;
-            background-size: cover;
-            color: white;
-            font-family: Arial, sans-serif;
-        }
-        .overlay {
-            background-color: rgba(0, 0, 0, 0.6);
-            height: 100%;
-            width: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-            padding: 20px;
-            box-sizing: border-box;
-        }
-        .content {
-            max-width: 90%;
-        }
-        h1 {
-            font-size: 24px;
-        }
-        .hidden-link {
-            display: none;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Внимание</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background: url('background.jpg') no-repeat center center fixed;
+      background-size: cover;
+      font-family: sans-serif;
+      color: white;
+      text-align: center;
+    }
+    .container {
+      background-color: rgba(0,0,0,0.6);
+      padding: 20px;
+      margin-top: 30%;
+    }
+    .btn {
+      margin-top: 20px;
+      padding: 12px 24px;
+      background-color: #ff0050;
+      color: white;
+      border: none;
+      font-size: 18px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    .btn:hover {
+      background-color: #e60046;
+    }
+  </style>
 </head>
 <body>
-    <div class="overlay">
-        <div class="content">
-            <h1>Tap the three dots in the top right corner</h1>
-            <h1>And choose “Open in browser”</h1>
-        </div>
-    </div>
-    <script>
-        if (window.navigator.userAgent.includes("Chrome") || window.navigator.userAgent.includes("Safari")) {
-            setTimeout(() => {
-                if (document.referrer === "") {
-                    window.location.href = "https://offers.affimelody.com/click?pid=107337&offer_id=25";
-                }
-            }, 1500);
-        }
-    </script>
+  <div class="container">
+    <h2>Нажми на <b>⋯</b> в углу и выбери<br>«Открыть в браузере»</h2>
+    <button class="btn" onclick="location.href='https://beacons.ai/tg__gowero77'">Продолжить</button>
+  </div>
 </body>
 </html>
+
